Personal Website Second Commit
Personal Website Second Commit

--- a/my_portfolio.html
+++ b/my_portfolio.html
@@ -47,7 +47,7 @@
                     <small class="opacity-50 text-nowrap">HTML5, CSS3</small>
                     </div>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                <a href="https://dedaderviscan.github.io/dedaderviscan.personalwebsite.io/" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                     <img src="./images/for-portfolio/bootstrap.png" alt="twbs" width="48" height="48" class=" flex-shrink-0">
                     <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
@@ -57,7 +57,7 @@
                     <small class="opacity-50 text-nowrap"> Bootstrap </small>
                     </div>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                <a href="https://dedaderviscan.github.io/dedaderviscan.onlycats.io/" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                     <img src="./images/for-portfolio/bootstrap.png" alt="twbs" width="48" height="48" class=" flex-shrink-0">
                     <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
@@ -81,7 +81,7 @@
             </div>
 
             <div class="list-group">
-                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                <a href="https://dedaderviscan.github.io/dedaderviscan.dicegame.io/" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                     <img src="./images/for-portfolio/javascript.png" alt="twbs" width="48" height="48" class="flex-shrink-0">
                     <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
@@ -91,7 +91,7 @@
                     <small class="opacity-50 text-nowrap"> JavaScript </small>
                     </div>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                <a href="https://dedaderviscan.github.io/dedaderviscan.drumkit.io/" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                     <img src="./images/for-portfolio/javascript.png" alt="twbs" width="48" height="48" class="flex-shrink-0">
                     <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
@@ -101,7 +101,7 @@
                     <small class="opacity-50 text-nowrap"> JavaScript </small>
                     </div>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                <a href="https://dedaderviscan.github.io/dedaderviscan.simongame.io/" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                     <img src="./images/for-portfolio/javascript.png" alt="twbs" width="48" height="48" class="flex-shrink-0">
                     <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
