--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <img class="img-fluid" src="./images/tech-support-icon.png" alt="tech support icon">
                 </div>
                 <h4 class="fw-semibold mb-0 text-body-emphasis">Social and Technical Website support</h4>
-                <p class="text-body-secondary">2nd Line Customer Support working for Youtube, Supporting the first level Youtube helpdesk team. 
+                <p class="text-body-secondary">2nd Line Customer Support working for YT, Supporting the first level YT helpdesk team. 
                   Helping the first line support team in order to help the users and resolving their issues.
                   </p>
               </div>
