--- a/my_portfolio.html
+++ b/my_portfolio.html
@@ -44,7 +44,7 @@
                         <h6 class="mb-0">Online Resume Project 2.0</h6>
                         <p class="mb-0 opacity-75">A resume website created by HTML5 and CSS3.</p>
                     </div>
-                    <small class="opacity-50 text-nowrap">HTML5, CSS3</small>
+                    <small class="opacity-50 text-nowrap"> CSS3 </small>
                     </div>
                 </a>
                 <a href="https://dedaderviscan.github.io/dedaderviscan.personalwebsite.io/" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
@@ -52,7 +52,7 @@
                     <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
                         <h6 class="mb-0">Online Resume Project 3.0</h6>
-                        <p class="mb-0 opacity-75">An online resume project developed by Bootstrap framework for HTML and CSS.</p>
+                        <p class="mb-0 opacity-75">An online resume project developed by Bootstrap <br> framework  for HTML and CSS.</p>
                     </div>
                     <small class="opacity-50 text-nowrap"> Bootstrap </small>
                     </div>
@@ -62,21 +62,12 @@
                     <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
                         <h6 class="mb-0">OnlyCats Website</h6>
-                        <p class="mb-0 opacity-75">Advertisement website of an matchmaking application for the Cats. </p>
+                        <p class="mb-0 opacity-75">A commercial website of an matchmaking application <br> for the Cats developed by Bootstrap framework for HTML and CSS3. </p>
                     </div>
                     <small class="opacity-50 text-nowrap"> Bootstrap </small>
                     </div>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
-                    <img src="./images/for-portfolio/react.png" alt="twbs" width="48" height="48" class=" flex-shrink-0">
-                    <div class="d-flex gap-2 w-100 justify-content-between">
-                    <div>
-                        <h6 class="mb-0">Keeper App Website</h6>
-                        <p class="mb-0 opacity-75">Some placeholder content in a paragraph.</p>
-                    </div>
-                    <small class="opacity-50 text-nowrap"> React.js </small>
-                    </div>
-                </a>
+                
                 
             </div>
 
@@ -109,6 +100,26 @@
                         <p class="mb-0 opacity-75"> Replica of the Simon Game developed by Javascript and jQuery library. </p>
                     </div>
                     <small class="opacity-50 text-nowrap">JavaScript</small>
+                    </div>
+                </a>
+                <a href="https://6fyfwt.csb.app/" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <img src="./images/for-portfolio/react.png" alt="twbs" width="48" height="48" class=" flex-shrink-0">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                        <h6 class="mb-0">To-Do List Website</h6>
+                        <p class="mb-0 opacity-75">A To-do List Website developed by React.js @codesandbox.io </p>
+                    </div>
+                    <small class="opacity-50 text-nowrap"> React.js </small>
+                    </div>
+                </a>
+                <a href="https://sh8ykh.csb.app/" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <img src="./images/for-portfolio/react.png" alt="twbs" width="48" height="48" class=" flex-shrink-0">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                        <h6 class="mb-0">Note Keeper App Website</h6>
+                        <p class="mb-0 opacity-75">A Note Keeper application developed by react.js @codesandbox.io </p>
+                    </div>
+                    <small class="opacity-50 text-nowrap"> React.js </small>
                     </div>
                 </a>
             </div>
