Fixing Carousel, Editing Text
Fixing Carousel, Editing Text, The content text needs to be improved.

--- a/about_me.html
+++ b/about_me.html
@@ -32,8 +32,8 @@
           <h1 class="fw-light"> Welcome to my photo gallery! </h1>
           <p class="lead text-body-secondary"> I enjoy travelling, TO BE EDITED!  ]  Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
           <p>
-            <a href="https://www.instagram.com/dedaderviscan/"" class="btn btn-primary my-2">More on Instagram</a>
-            <a href="https://x.com/dedaderviscan" class="btn btn-secondary my-2">More on Twitter</a>
+            <a href="https://www.instagram.com/dedaderviscan/"" class="btn btn-dark my-2">More on Instagram</a>
+            <a href="https://www.facebook.com/profile.php?id=1594634756" class="btn btn-primary my-2">More on Facebook</a>
           </p>
         </div>
       </div>
