Personal Website Final.
Personal Website Final Version. May to be developed!

--- a/my_portfolio.html
+++ b/my_portfolio.html
@@ -86,8 +86,8 @@
                     <img src="./images/for-portfolio/javascript.png" alt="twbs" width="48" height="48" class="flex-shrink-0">
                     <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
-                        <h6 class="mb-0">Drum Player</h6>
-                        <p class="mb-0 opacity-75">A drum kit player developed by JavaScript and DOM manipulation. </p>
+                        <h6 class="mb-0">Virtual Drum Kit</h6>
+                        <p class="mb-0 opacity-75">A virtual drum kit player developed by JavaScript and DOM manipulation. </p>
                     </div>
                     <small class="opacity-50 text-nowrap"> JavaScript </small>
                     </div>
@@ -97,7 +97,7 @@
                     <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
                         <h6 class="mb-0">Simon Game </h6>
-                        <p class="mb-0 opacity-75"> Replica of the Simon Game developed by Javascript and jQuery library. </p>
+                        <p class="mb-0 opacity-75"> Web replica of the Simon Game developed by Javascript and jQuery library. </p>
                     </div>
                     <small class="opacity-50 text-nowrap">JavaScript</small>
                     </div>
@@ -127,7 +127,7 @@
     </div>
 
     <!-- footer section - fixed to bottom -->
-    <div class="container footer">
+    <div class="container">
         <footer class="py-3 mt-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
