--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                 <h2 class="lead">An engineer, web designer and developer, website user support analyst, and web content moderator. 
                 </h2>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                    <p class="text-justify">I am a civil engineer working in social&technical support and web content moderation environment. I am interested in web development, coding, and programming in order to become a professional web app developer and programmer. I am looking forward to having a job where I can improve myself and practice my knowledge.
-                    </p>
+                    <p class="text-justify"> I am an engineer working in customer support, web user support and web content moderation environment. I am practicing full stack web development, coding, and programming in order to become a professional app developer and software engineer. I am looking forward to having a job where I can improve myself and practice my knowledge. Currenly, I continue my developer journey by Python from a Python Bootcam Course.  </p>
                 </div>
             </div>
         </div>
@@ -67,7 +66,7 @@
                     <img class="img-fluid" src="./images/tech-support-icon.png" alt="tech support icon">
                 </div>
                 <h4 class="fw-semibold mb-0 text-body-emphasis">Social and Technical Website support</h4>
-                <p class="text-body-secondary text-justify">Supporting the first level YT helpdesk team as 2nd Line Customer Support. Helping the first-line support team in order to help the users and resolve their issues by using the YT Flows Ticket tool system. 
+                <p class="text-body-secondary text-justify">Supporting the first level helpdesk of a video platform website as 2nd Line Customer Support and as a SME Website admin. Helping the first-line support team in order to help the users and resolve their issues by using the Flows Ticket tool system. 
                   </p>
               </div>
     
@@ -84,7 +83,7 @@
                     <img class="img-fluid" src="./images/office-applications-icon.png" alt="office applications icon">
                 </div>
                 <h4 class="fw-semibold mb-0 text-body-emphasis">High IT Skills and Literacy</h4>
-                <p class="text-body-secondary text-justify"> I have experience using Microsoft Office and Google Workspace business applications such as; docs, excel spreadsheets,... I understand and am highly interested in programming as currently, I enrolled in a Phyton Pro boot-camp course.  </p>
+                <p class="text-body-secondary text-justify"> I have experience using Microsoft Office and Google Workspace business applications such as; docs, excel spreadsheets, ... I understand coding and am highly interested in programming as I enrolled in a Python Pro boot-camp course currently.  </p>
               </div>
     
               <div class="col d-flex flex-column gap-2">
@@ -92,7 +91,7 @@
                   <img class="img-fluid" src="./images/3d-modeling-icon.png" alt="office applications icon">
                 </div>
                 <h4 class="fw-semibold mb-0 text-body-emphasis">3D Modelling and Technical Drawing</h4>
-                <p class="text-body-secondary text-justify"> I am experienced in 3D modeling and technical drawings as I have a MSc Civil Engineering background, able to use computer-aided design and 3d modeling applications such as; Autodesk Revit, Autocad, and Mathcad.  </p>
+                <p class="text-body-secondary text-justify"> I am experienced in 3D modeling and technical drawings as I have a MSc Civil Engineering background, able to use computer-aided design and 3D modeling applications such as; Autodesk Revit, Autocad, and Mathcad.  </p>
               </div>
             </div>
           </div>
@@ -146,13 +145,13 @@
 <!-- jumbotron get in touch -->
     <div class="container my-5">
         <div class="p-5 text-center bg-body-tertiary rounded-3">
-            <h1 class="text-body-emphasis">Get In Touch</h1>
+            <h1 class="text-body-emphasis">Get In Touch!</h1>
             <h2 class="text-body-emphasis">If you like fitness, coding, and travelling as much as I do!</h2>
             <p class="col-lg-8 mx-auto fs-5 text-muted"> In my daily routine, I usually spend my time on my self improvement: Coding and Lifting. I do weightlifting, I like fitness and have adopted a healthy lifestyle. We can argue together about coding and programming during the travels, gym, working out, or while cooking and eating a healthy meal with high-protein :)</p>
             <div class="d-inline-flex gap-2 mb-5 mt-3">
                 <a href="./contact_info.html">
                   <button class="d-inline-flex align-items-center btn btn-dark px-4 rounded-pill" type="button">
-                Contact me by e-mail
+                Contact me
                   </button>
                 </a>
             </div>
