Fixing content text.
Fixing some content text on hero header.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h2 class="lead">An engineer, web designer and developer, website user support analyst, and web content moderator. 
                 </h2>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                    <p class="text-justify"> I am an engineer working in customer support, web user support and web content moderation environment. I am practicing full stack web development, coding, and programming in order to become a professional app developer and software engineer. I am looking forward to having a job where I can improve myself and practice my knowledge. Currenly, I continue my developer journey by Python from a Python Bootcam Course.  </p>
+                    <p class="text-justify"> I am an engineer working in customer support, web user support, and web content moderation environment. I am practicing full-stack web development, coding, and programming in order to become a professional app developer and software engineer. I am looking forward to having a job where I can improve myself and practice my knowledge. Currently, I am continuing my developer journey in Python from a Python Bootcamp Course.  </p>
                 </div>
             </div>
         </div>
