--- a/contact_info.html
+++ b/contact_info.html
@@ -72,7 +72,7 @@
     </div>
     
     <!-- footer section - fixed to bottom -->
-    <div class="container footer">
+    <div class="container">
         <footer class="py-3 mt-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
